2004-11-19  Stepan Kasal  <kasal@ucw.cz>

	* src/dfa.c: Added some simple changes from gawk.
	* src/mbstate.h: Imported from gawk.

2004-11-11  Stepan Kasal  <kasal@ucw.cz>

	* tests/spencer1.awk: Use only lines with 3 fields.
	* tests/spencer1.tests: Disable #55 for now.
	* tests/ere.tests, tests/bre.tests: Add "TO CORRECT" to disabled
	  tests which had empty $4.
	* tests/backref.sh: Modify #2 so that current glibc regex can
	  handle it in finite time.

2004-11-12  Stepan Kasal  <kasal@ucw.cz>

	Change bug-gnu-utils address to bug-grep, on many places; there
	is no need to have the word ``grep'' in subject then.
	Thanks to Tony Abou-Assaleh and Benno Schulenberg for pointing
	out this.

2004-11-02  Stepan Kasal  <kasal@ucw.cz>

	* README-alpha: Remove obsolete instructions about CVS, redirect
	  the reader to savannah web.

2004-09-26  Stepan Kasal  <kasal@ucw.cz>

	* src/search.c (check_multibyte_string, Gcompile, Ecompile): Replace
	  malloc with xmalloc.
	* src/dfa.c (dfamust): Replace two calls to ``malloc'' by MALLOC.

2003-07-23  Stepan Kasal  <kasal@ucw.cz>

	* src/Makefile.am: Add the egrep and fgrep scripts to CLEANFILES.

2003-07-23  Stepan Kasal  <kasal@ucw.cz>
	* tests/backref.sh: Messages fixed.

2003-07-08  David Kaelbling  <drk@sgi.com>  (tiny change)
	* src/dfa.c: remove non-constant initializers from dfa.c

2003-06-16  Stepan Kasal  <kasal@ucw.cz>
	* doc/grep.1: two typos "--line-buffered [...] penalty"
	* doc/grep.texi: a typo

2003-06-12  Bernhard Rosenkraenzer <bero@arklinux.org>
	* README-alpha: Mention bug tracking system and grep-devel-list
	* tests/spencer1.tests: Fix test 55, as noted by Tim Waugh

2003-06-05  Stepan Kasal  <kasal@ucw.cz>
	* tests/formatbre.awk, tests/formatere.awk: probably unused, so
	  I've removed them.

2003-06-05  Stepan Kasal  <kasal@ucw.cz>
	* intl/Makefile: remove generated file.

2003-06-04  Stepan Kasal  <kasal@ucw.cz>
	* src/dfa.c: typos fixed.

2003-05-30  Bernhard Rosenkraenzer <bero@arklinux.org>