@@ -1,5 +1,10 @@
 2004-11-19  Stepan Kasal  <kasal@ucw.cz>
 
+	* src/dfa.c: Remove old version of gofast patch, from 2003-05-30.
+	* src/search.c (check_multibyte_string): Likewise.
+
+2004-11-19  Stepan Kasal  <kasal@ucw.cz>
+
 	* src/dfa.c: Added some simple changes from gawk.
 	* src/mbstate.h: Imported from gawk.
 
